Added UI improvements: prettyer presentation, navigation links, more information in displays

--- a/tutorialapp/polls/templates/polls/detail.html
+++ b/tutorialapp/polls/templates/polls/detail.html
@@ -1,15 +1,21 @@
+{% load staticfiles %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/detail.css' %}"/>
+
 <h1>{{ poll.question }}</h1>
-<p>{{ poll.pub_date }}</p>
+<p class="pubdate">Published {{ poll.pub_date }}</p>
 
 {% if error_message %}
     <p class="errormessage">{{ error_message }}</p>
 {% endif %}
+<div id="form-container">
+    <form action="{% url 'polls:vote' poll.id %}" method="POST">
+        {% csrf_token %}
+        {% for choice in poll.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+            <label class="inputLabel" for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
+        {% endfor %}
+        <input id="submit" type="submit" value="Vote" />
+    </form>
+</div>
 
-<form action="{% url 'polls:vote' poll.id %}" method="POST">
-    {% csrf_token %}
-    {% for choice in poll.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br/>
-    {% endfor %}
-    <input type="submit" value="Vote" />
-</form>
+<a id="backbutton" href="{% url 'polls:index' %}">Back to Index</a>
